--- a/curve/mainwindowbase.ui
+++ b/curve/mainwindowbase.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>884</width>
-    <height>638</height>
+    <height>657</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,14 +19,79 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <widget class="QLabel" name="label_lineCounts">
+      <property name="text">
+       <string>0行</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="5">
+     <widget class="QLineEdit" name="lineEdit_ip"/>
+    </item>
+    <item row="0" column="9">
+     <widget class="QLabel" name="label_10">
+      <property name="text">
+       <string>输入命令：</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="8">
+     <widget class="QPushButton" name="pushButton_start_udp">
+      <property name="text">
+       <string> 开始检测</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QLabel" name="label_local">
+      <property name="text">
+       <string>127.0.0.1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="10">
+     <widget class="QLineEdit" name="lineEdit_cmd"/>
+    </item>
+    <item row="0" column="6">
+     <widget class="QLabel" name="label_9">
+      <property name="text">
+       <string>目标端口：</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="11">
+     <widget class="QPushButton" name="pushButton_cmd">
+      <property name="text">
+       <string>发送命令</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="4">
+     <widget class="QLabel" name="label_8">
+      <property name="text">
+       <string>   目标主机：</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="7">
+     <widget class="QLineEdit" name="lineEdit_port"/>
+    </item>
     <item row="0" column="0">
+     <widget class="QLabel" name="label_11">
+      <property name="text">
+       <string>  已收行数:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="13">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>串口线阵曲线</string>
+        <string>UDP线阵曲线</string>
        </attribute>
        <widget class="QGroupBox" name="groupBox">
         <property name="geometry">
@@ -167,7 +232,14 @@
         <property name="title">
          <string>配置</string>
         </property>
-        <layout class="QGridLayout" name="gridLayout_2">
+        <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1,0">
+         <item row="0" column="2">
+          <widget class="QPushButton" name="START">
+           <property name="text">
+            <string>设置</string>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_20">
            <property name="text">
@@ -176,26 +248,15 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="LEDTIME_SMP">
-           <property name="text">
-            <string>80</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="2">
-          <widget class="QPushButton" name="START">
-           <property name="text">
-            <string>开始检测</string>
-           </property>
-          </widget>
+          <widget class="QComboBox" name="comboBox"/>
          </item>
         </layout>
        </widget>
        <widget class="QPushButton" name="pushButton_clear">
         <property name="geometry">
          <rect>
-          <x>770</x>
-          <y>90</y>
+          <x>610</x>
+          <y>80</y>
           <width>75</width>
           <height>23</height>
          </rect>
@@ -288,8 +349,8 @@
        <widget class="QPushButton" name="savedata">
         <property name="geometry">
          <rect>
-          <x>690</x>
-          <y>90</y>
+          <x>610</x>
+          <y>50</y>
           <width>75</width>
           <height>23</height>
          </rect>
@@ -353,7 +414,7 @@
         <property name="geometry">
          <rect>
           <x>610</x>
-          <y>90</y>
+          <y>20</y>
           <width>75</width>
           <height>23</height>
          </rect>
@@ -375,152 +436,12 @@
          <string>接收到数据：</string>
         </property>
        </widget>
-       <widget class="QGroupBox" name="groupBox_5">
-        <property name="geometry">
-         <rect>
-          <x>610</x>
-          <y>10</y>
-          <width>180</width>
-          <height>71</height>
-         </rect>
-        </property>
-        <property name="title">
-         <string>图表设置</string>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <property name="spacing">
-          <number>6</number>
-         </property>
-         <property name="bottomMargin">
-          <number>9</number>
-         </property>
-         <item>
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>显示模式:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="radioButton_single">
-           <property name="text">
-            <string>单条</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="radioButton_multi">
-           <property name="text">
-            <string>15条</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
       </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
         <string>UDP扫描图</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_5">
-          <item>
-           <widget class="QLabel" name="label_11">
-            <property name="text">
-             <string>  已收行数:</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_lineCounts">
-            <property name="text">
-             <string>0行</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_local">
-            <property name="text">
-             <string>127.0.0.1</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_8">
-            <property name="text">
-             <string>   目标 主机：</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="lineEdit_ip"/>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_9">
-            <property name="text">
-             <string>目标 端口：</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="lineEdit_port"/>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_start_udp">
-            <property name="text">
-             <string> 开始 检测</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_10">
-            <property name="text">
-             <string>输入 命令：</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="lineEdit_cmd"/>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_cmd">
-            <property name="text">
-             <string>发送 命令</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
         <item>
          <widget class="QScrollArea" name="scrollArea">
           <property name="widgetResizable">
@@ -532,7 +453,7 @@
              <x>0</x>
              <y>0</y>
              <width>840</width>
-             <height>488</height>
+             <height>509</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_6">
